@@ -25,6 +25,7 @@ Version 5.2.0 - DEV
    with other script names.
  - Update ACE editor to version 1.2.3, jQuery to version 2.2.4.
  - Implement better password hashing (#237 thanks Bert Peters).
+ - Allow float timelimits (#235).
 
 Version 5.1.0 - 7 December 2015
 -------------------------------
